# usd-sys

./: README.md  bind.sh
bind/: bind.hpp  bind_base_tf_token.cpp  bind_defs.hpp  bind_token.hpp  bind_usd_usd_prim.cpp
cast_xml_schema/src/: lib.rs  main.rs  schema.rs
castxml_schema/: Cargo.toml  castxml.xsd
castxml_schema/src/: lib.rs
castxml_to_c/: Cargo.toml
castxml_to_c/src/: ast.rs  main.rs
