[package]
name = "castxml_to_c"
version = "0.1.0"
authors = ["Luke Titley <luke@titley.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.4.1"
serde = {version="1.0.121", features = ["derive", "rc"]}
castxml_schema = {path="../castxml_schema"}

